--- a/_includes/themes/tom/default.html
+++ b/_includes/themes/tom/default.html
@@ -21,8 +21,9 @@
   <div class="site">
     <div class="title">
       <a href="{{ HOME_PATH }}">{{ site.title }}</a>
-      <a class="extra" href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
+      <a class="extra" href="{{ HOME_PATH }}">home</a>
 <!--
+      <a class="extra" href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archive</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.pages_path }}">Pages</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.categories_path }}">Categories</a>
       <a class="extra" href="{{ BASE_PATH }}{{ site.JB.tags_path }}">Tags</a>
@@ -43,13 +44,16 @@
         <p>
           <a href="http://twitter.com/{{ site.author.twitter }}/">twitter</a><br />
           <a href="http://linkedin.com/{{ site.author.linkedin }}">linkedin</a><br />
+          <a href="http://github.com/{{ site.author.github}}">github</a><br />
         </p>
       </div>
+      <!--
       <div class="rss">
         <a href="http://feeds.feedburner.com/{{ site.author.feedburner }}">
           <img src="{{ ASSET_PATH }}/images/rss.png" alt="Subscribe to RSS Feed" />
         </a>
       </div>
+      -->
     </div>
   </div>
 
