--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
   .site-nav .menu-icon > svg path { fill: #424242; }
   .site-nav .trigger { clear: both; display: none; }
   .site-nav:hover .trigger { display: block; padding-bottom: 5px; }
-  .site-nav .page-link { display: block; padding: 5px 10px; margin-left: 20px; }
+.site-nav .page-link { display: block; padding: 5px 10px; /* CUSTOM margin-left: 20px;*/ }
   .site-nav .page-link:not(:last-child) { margin-right: 0; } }
 
 /** Site footer */
@@ -191,7 +191,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .highlight .vi { color: #008080; }
 .highlight .il { color: #099; }
 
-/* custom styles */
+/* CUSTOM styles */
 .social-media-list .icon {
   padding: 4px;
 }
