--- a/css/styles.css
+++ b/css/styles.css
@@ -195,3 +195,8 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .social-media-list .icon {
   padding: 4px;
 }
+
+.about {
+  margin-top: -30px;
+  padding-bottom: 30px;
+}
